<resources>
    <string name="app_name">SCall</string>
    <string name="preview">Preview</string>
    <string name="font">Font</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="effect">Effect</string>
    <string name="make_your_style">Make Your Style</string>
    <string name="save_success">Save Success</string>
    <string name="background">Background</string>
    <string name="calling"> Calling</string>
    <string name="another_effect">Another Effect</string>
    <string name="cancel">cancel</string>
    <string name="confirm_quit">Do you want quit app?</string>
    <string name="ok">ok</string>
    <string name="full_screen">Full Screen</string>
    <string name="reject">Reject</string>
    <string name="answer">Answer</string>
    <string name="start">Start</string>
    <string name="close_ad">Close ad</string>
    <string name="next">NEXT</string>
    <string name="choose_picture">Choose photo from</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="take_screen">Take Screen </string>
    <string name="choice_another_effect">You must pick another effect first!!! </string>
    <string name="max_choice">Selected only maximum 10 item</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="interstitial_ads">ca-app-pub-3940256099942544/1033173712</string>
</resources>
