<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spash4"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_start"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_elip"
        android:text="@string/start"
        android:textColor="@color/white"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/padding_20"
        android:background="@color/tranparent"
        android:text="@string/next"
        android:textColor="@color/white"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/img_reject_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_end_call" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:text="@string/reject"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/img_accept_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:text="@string/answer"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:drawablePadding="@dimen/padding_10"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="22dp" />
</RelativeLayout>